tests/errors/SettingsError/filters/f02.exec
# format: exec
exec:--filter;before=2017-02-29;
